# cookiecutter-cpp

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  docker-compose.yml  pyproject.toml  vcpkg.json
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  Dockerfile.cicd  cicd.Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/cmake/: dev-mode.cmake  environment.cmake  lint-targets.cmake  lint.cmake  simd.cmake  variables.cmake
{{cookiecutter.project_slug}}/cmake/simd_utils/: check_avx2_support.cmake  check_avx512_support.cmake  check_neon_support.cmake
{{cookiecutter.project_slug}}/docs/: .gitignore  Doxyfile
{{cookiecutter.project_slug}}/example/: CMakeLists.txt
{{cookiecutter.project_slug}}/include/: .gitkeep
{{cookiecutter.project_slug}}/scripts/: bump_version.py
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.cpp
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: addition.cpp  addition.h
{{cookiecutter.project_slug}}/test/: .clang-tidy  CMakeLists.txt
{{cookiecutter.project_slug}}/test/src/{{cookiecutter.project_slug}}/: test_addition.cpp
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  test_sample.cpp  tests.cpp
